# gateway

./: .gitignore  CMakeLists.txt  Makefile  README.md  mygateway.properties  rmgateway.properties
html/: footer.inc  header.inc  template.inc
res/: AjaxCore.js  Stylesheet.css
src/: AjaxCore.cpp  AjaxCore.h  CreateDevicePage.cpp  CreateDevicePage.cpsp  CreateDevicePage.h  CreateDevicePageController.cpp  CreateDevicePageController.h  DeviceManager.cpp  DeviceManager.h  DevicePage.cpp  DevicePage.cpsp  DevicePage.h  DevicePageController.cpp  DevicePageController.h  FavIcon.cpp  FavIcon.h  FooterLogo.cpp  FooterLogo.h  FooterLogoX2.cpp  FooterLogoX2.h  GatewayServer.cpp  Gradient.cpp  Gradient.h  HeaderLogo.cpp  HeaderLogo.h  HeaderLogoX2.cpp  HeaderLogoX2.h  IndexPage.cpp  IndexPage.cpsp  IndexPage.h  IndexPageController.cpp  IndexPageController.h  LoginPage.cpp  LoginPage.cpsp  LoginPage.h  LoginPageController.cpp  LoginPageController.h  MinusIcon.cpp  MinusIcon.h  MinusIconX2.cpp  (+23 more)
